Ship a one-click Windows installer (jpackage .exe), v0.1.5